--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da0e012d",
+   "id": "ec19ce5b",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2152cf00",
+   "id": "e5505145",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2563785b",
+   "id": "cfad01eb",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e653930",
+   "id": "ae001a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "482d088c",
+   "id": "e3c3d0e3",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a945d90a",
+   "id": "0b41e65f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825307b5",
+   "id": "730547ea",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b4b2fb6",
+   "id": "6a3e387d",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f375a37a",
+   "id": "0712d5c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3484b3a2",
+   "id": "c13b23bd",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "45f78751",
+   "id": "00db6008",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1ef7409d",
+   "id": "75b3924f",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f81e6a8",
+   "id": "d595ffb6",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3dcc5178",
+   "id": "6783a02d",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cc96ff52",
+   "id": "d1526ffa",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "716e85a0",
+   "id": "f69d62bd",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7de6994a",
+   "id": "bbf52887",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dffc607",
+   "id": "7a7a1bdb",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3cbf5393",
+   "id": "5ed5f7b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f4a522db",
+   "id": "1cf408bb",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "24a840bb",
+   "id": "1897c902",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bfd4f87",
+   "id": "6a60a6eb",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c1696bff",
+   "id": "8008c38c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "248f68b2",
+   "id": "eadc2d4a",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "55bdcd13",
+   "id": "f3819c93",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cbd9c59f",
+   "id": "12657701",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "82eb5e08",
+   "id": "dcbd3ae8",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b545bc29",
+   "id": "b4105885",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b607fe64",
+   "id": "76ef28d1",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2909e994",
+   "id": "aae1d40d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f952d23b",
+   "id": "94e497f6",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "13c64f09",
+   "id": "61113cc7",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9ee529d7",
+   "id": "0e796d38",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ce11d7e9",
+   "id": "ffcdd57f",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "504c471a",
+   "id": "4d2a67cf",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "531b0027",
+   "id": "c2e6047e",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fe712667",
+   "id": "867fe3df",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64fc75e7",
+   "id": "6746f4d2",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec77fb3",
+   "id": "ce44f8b5",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d104579b",
+   "id": "47f0231f",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef825356",
+   "id": "72aa1dbb",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9d595de0",
+   "id": "3f4b9e17",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b1d586af",
+   "id": "2b509bcf",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84893d24",
+   "id": "f34ea6d9",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8490110a",
+   "id": "bcb928fe",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "745ae515",
+   "id": "d62506b9",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2e2a7f1f",
+   "id": "267fc9d0",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abdc10a3",
+   "id": "b02def34",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "89a933a0",
+   "id": "7c6b0794",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af6c0e6",
+   "id": "8562e63b",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f06dea",
+   "id": "c5ed6846",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "119d4e1e",
+   "id": "10b82868",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b8251c0f",
+   "id": "e4f6c496",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e22a55a5",
+   "id": "a3ec271e",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "56525263",
+   "id": "6eba3a04",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4fc439d1",
+   "id": "76d03a1a",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "58aea658",
+   "id": "26bd94ae",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7fe30b69",
+   "id": "555bc654",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1d899ec4",
+   "id": "bb473a64",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8c1949bf",
+   "id": "393aff8b",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a7f836c4",
+   "id": "89dc5788",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b3038d24",
+   "id": "78504b9c",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9caf6d",
+   "id": "95a645a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4120c23e",
+   "id": "d37d2ce3",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4936f50e",
+   "id": "4f1f1e78",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3d86567a",
+   "id": "58170618",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5fe5aa0c",
+   "id": "5006b115",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6863574",
+   "id": "59b7391c",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd9bbace",
+   "id": "72e497f3",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6a5ddcf7",
+   "id": "ea8d941d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "acb943cc",
+   "id": "3b2912e1",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e276598b",
+   "id": "af826f98",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c791a0",
+   "id": "3857f45f",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a5fd696b",
+   "id": "f8c68b38",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "33aa99eb",
+   "id": "989a7c26",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "fc7f91ee",
+   "id": "6d82d636",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fca217",
+   "id": "c1534fd6",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2677,124 +2677,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "e0cbec2c",
+   "execution_count": 77,
+   "id": "d9744e16",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# This is a comment\n",
-      "\n",
-      "# You should ignore me\n",
-      "\n",
-      "root:x:0:0:root:/root:/bin/bash\n",
-      "\n",
-      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
-      "\n",
-      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
-      "\n",
-      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
-      "\n",
-      "sync:x:4:65534:sync:/bin:/bin/sync\n",
-      "\n",
-      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
-      "\n",
-      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
-      "\n",
-      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
-      "\n",
-      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
-      "\n",
-      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
-      "\n",
-      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
-      "\n",
-      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
-      "\n",
-      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
-      "\n",
-      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
-      "\n",
-      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
-      "\n",
-      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
-      "\n",
-      "\n",
-      "\n",
-      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
-      "\n",
-      "syslog:x:101:104::/home/syslog:/bin/false\n",
-      "\n",
-      "messagebus:x:102:106::/var/run/dbus:/bin/false\n",
-      "\n",
-      "landscape:x:103:109::/var/lib/landscape:/bin/false\n",
-      "\n",
-      "jci:x:955:955::/home/jci:/bin/bash\n",
-      "\n",
-      "sshd:x:104:65534::/var/run/sshd:/usr/sbin/nologin\n",
-      "\n",
-      "user:x:1000:1000:user,,,:/home/user:/bin/bash\n",
-      "\n",
-      "reuven:x:1001:1001:Reuven M. Lerner,,,:/home/reuven:/bin/bash\n",
-      "\n",
-      "postfix:x:105:113::/var/spool/postfix:/bin/false\n",
-      "\n",
-      "colord:x:106:116:colord colour management daemon,,,:/var/lib/colord:/bin/false\n",
-      "\n",
-      "postgres:x:107:117:PostgreSQL administrator,,,:/var/lib/postgresql:/bin/bash\n",
-      "\n",
-      "dovecot:x:108:119:Dovecot mail server,,,:/usr/lib/dovecot:/bin/false\n",
-      "\n",
-      "dovenull:x:109:120:Dovecot login user,,,:/nonexistent:/bin/false\n",
-      "\n",
-      "postgrey:x:110:121::/var/lib/postgrey:/bin/false\n",
-      "\n",
-      "debian-spamd:x:111:122::/var/lib/spamassassin:/bin/sh\n",
-      "\n",
-      "memcache:x:113:124:Memcached,,,:/nonexistent:/bin/false\n",
-      "\n",
-      "genadi:x:1002:1003:Genadi Reznichenko,,,:/home/genadi:/bin/bash\n",
-      "\n",
-      "shira:x:1003:1004:Shira Friedman,,,:/home/shira:/bin/bash\n",
-      "\n",
-      "atara:x:1004:1005:Atara Lerner-Friedman,,,:/home/atara:/bin/bash\n",
-      "\n",
-      "shikma:x:1005:1006:Shikma Lerner-Friedman,,,:/home/shikma:/bin/bash\n",
-      "\n",
-      "amotz:x:1006:1007:Amotz Lerner-Friedman,,,:/home/amotz:/bin/bash\n",
-      "\n",
-      "mysql:x:114:125:MySQL Server,,,:/nonexistent:/bin/false\n",
-      "\n",
-      "clamav:x:115:126::/var/lib/clamav:/bin/false\n",
-      "\n",
-      "amavis:x:116:127:AMaViS system user,,,:/var/lib/amavis:/bin/sh\n",
-      "\n",
-      "opendkim:x:117:128::/var/run/opendkim:/bin/false\n",
-      "\n",
-      "gitlab-redis:x:999:1009::/var/opt/gitlab/redis:/bin/nologin\n",
-      "\n",
-      "gitlab-psql:x:998:1010::/var/opt/gitlab/postgresql:/bin/sh\n",
-      "\n",
-      "git:x:1007:1008:GitLab,,,:/home/git:/bin/bash\n",
-      "\n",
-      "opendmarc:x:118:129::/var/run/opendmarc:/bin/false\n",
-      "\n",
-      "dkim-milter-python:x:119:130::/var/run/dkim-milter-python:/bin/false\n",
-      "\n",
-      "deploy:x:1008:1011:Deploy,,,:/home/deploy:/bin/bash\n",
-      "\n",
-      "redis:x:112:123:redis server,,,:/var/lib/redis:/bin/false\n",
-      "\n"
+      "root\n",
+      "daemon\n",
+      "bin\n",
+      "sys\n",
+      "sync\n",
+      "games\n",
+      "man\n",
+      "lp\n",
+      "mail\n",
+      "news\n",
+      "uucp\n",
+      "proxy\n",
+      "www-data\n",
+      "backup\n",
+      "list\n",
+      "irc\n",
+      "gnats\n",
+      "nobody\n",
+      "syslog\n",
+      "messagebus\n",
+      "landscape\n",
+      "jci\n",
+      "sshd\n",
+      "user\n",
+      "reuven\n",
+      "postfix\n",
+      "colord\n",
+      "postgres\n",
+      "dovecot\n",
+      "dovenull\n",
+      "postgrey\n",
+      "debian-spamd\n",
+      "memcache\n",
+      "genadi\n",
+      "shira\n",
+      "atara\n",
+      "shikma\n",
+      "amotz\n",
+      "mysql\n",
+      "clamav\n",
+      "amavis\n",
+      "opendkim\n",
+      "gitlab-redis\n",
+      "gitlab-psql\n",
+      "git\n",
+      "opendmarc\n",
+      "dkim-milter-python\n",
+      "deploy\n",
+      "redis\n"
      ]
     }
    ],
@@ -2815,18 +2754,21 @@
     "        continue  # ignore comment lines\n",
     "        \n",
     "    if one_line.strip() == '':\n",
-    "        c\n",
+    "        continue   # ignore blank lines\n",
     "    \n",
-    "    print(one_line)"
+    "    print(one_line.split(':')[0])  # turn each line into a list of fields, and get index 0 -- the username"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8f87106",
+   "cell_type": "markdown",
+   "id": "278976e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Summing numbers\n",
+    "\n",
+    "1. Define `total` to 0.\n",
+    "2. Go through the file `nums.txt`"
+   ]
   }
  ],
  "metadata": {
